@@ -158,6 +158,9 @@ Queue changes
   * A new option, 'I' has been added to both app_queue and app_dial.
     By setting this option, Asterisk will not update the caller with
     connected line changes or redirecting party changes when they occur.
+  * A 'relative-peroidic-announce' option has been added to queues.conf.  When
+    enabled, this option will cause periodic announce times to be calculated
+    from the end of announcements rather than from the beginning.
 
 mISDN channel driver (chan_misdn) changes
 ----------------------------------------
